structural-typing/tests/ui/access_absent_field_directly.stderr
error[E0308]: mismatched types
  --> tests/ui/access_absent_field_directly.rs:10:29
   |
10 |     let _name_str: String = user.name;
   |                    ------   ^^^^^^^^^ expected `String`, found `PhantomData<String>`
   |                    |
   |                    expected due to this
   |
   = note: expected struct `String`
              found struct `PhantomData<String>`
