structural-typing/tests/ui/access_absent_field_directly.rs
use structural_typing::structural;

#[structural]
struct User {
    name: String,
}

fn main() {
    let user = User::empty();
    let _name_str: String = user.name;
}
